chore: refactorings